--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -71,4 +71,90 @@ a:active { background: #ffca28; }
 
 .navicon div:after { top: 7px; }
 
+.square {
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    position: absolute;
+    top: calc(50% - 150px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.form-container {
+    width: 500px;
+    margin: 50px auto;
+    border-radius: 10px;
+    background-color: #f0f0f0;
+}
 
+.form-container h2 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-group input[type="text"],
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #ffffff;
+}
+
+.form-group input[type="text"]:focus,
+.form-group textarea:focus {
+    outline: none;
+    box-shadow: 0px 0px 5px #00000030;
+}
+
+.form-group button[type="submit"] {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #4CAF50;
+    color: #ffffff;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.form-group button[type="submit"]:hover {
+    background-color: #3e8e41;
+}
+
+.table {
+    border-collapse: collapse;
+    width: 100%;
+    font-size: 1rem;
+    color: #333;
+}
+
+.table th,
+.table td {
+    padding: 0.75rem;
+    text-align: left;
+    border: 1px solid #ccc;
+}
+
+.table th {
+    background-color: #eee;
+}
+
+.table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 15px;
+}
