--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -12,7 +12,7 @@
             <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6">
                 <div class="form-container">
                     <h3 class="title">My Account</h3>
-                    <form class="form-horizontal" action="/login" method="POST">
+                    <form class="form-horizontal" action="/" method="POST">
                         <div class="form-icon">
                             <i class="fa fa-user-circle"></i>
                         </div>
