delete function on group

--- a/src/main/resources/templates/menu/groupmenu.html
+++ b/src/main/resources/templates/menu/groupmenu.html
@@ -85,6 +85,10 @@
 
   </table>
 
+  <form th:action="@{'/group/' + ${groupid} + '/delete'}" method="post">
+    <input type="submit" value="Delete Group" style="background-color: red;">
+  </form>
+
 
 
 </div>
